--- a/frontend/src/pages/bibliotecario.html
+++ b/frontend/src/pages/bibliotecario.html
@@ -28,6 +28,7 @@
                     <li><a href="../pages/devolucao.html">Devoluções</a></li>
                     <li><a href="../pages/multas.html">Multas</a></li>
                     <li><a href="../pages/cadastrarLivros.html">Cadastrar Livros</a></li>
+                    <li><a href="../pages/aluno.html">Livros</a></li>
                     <li><a href="../../index.html">Sair</a></li>
                 </ul>
             </nav>
