--- a/frontend/src/pages/devolucao.html
+++ b/frontend/src/pages/devolucao.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav class="navbar">
-            <a href="#" class="logo">Biblioteca</a>
+            <a href="../pages/devolucao.html" class="logo">Biblioteca</a>
             <ul class="nav-links">
                 <li><a href="../pages/emprestimoUser.html">Empréstimos</a></li>
                 <li><a href="../pages/emprestimoRenovacao.html">Renovação de Empréstimos</a></li>
