--- a/frontend/src/pages/multas.html
+++ b/frontend/src/pages/multas.html
@@ -13,6 +13,7 @@
     <main>
         <section class="multas-section">
             <h2>Lista de Multas Pendentes</h2>
+            <button id="gerar-multas-btn">Gerar Multas</button>
             <table>
                 <thead>
                     <tr>
